Fix #120761: Tag all PBVH nodes for needing a visibility update when using hide tools